// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should handle home clicked 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
>
  <BreadcrumbItem
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </BreadcrumbItem>
  <BreadcrumbItem
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </BreadcrumbItem>
  <BreadcrumbItem
    aria-current="page"
    isActive={true}
  >
    Task 1 of 3
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumb component should render breadcrumb with props 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
>
  <BreadcrumbItem
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </BreadcrumbItem>
  <BreadcrumbItem
    to="/tutorial/1"
  >
    Unit Test Walkthrough
  </BreadcrumbItem>
  <BreadcrumbItem
    aria-current="page"
    isActive={true}
  >
    Task 1 of 3
  </BreadcrumbItem>
</Breadcrumb>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<Breadcrumb
  aria-label="Breadcrumb"
>
  <BreadcrumbItem
    id="breadcrumb-home"
    onClick={[Function]}
    to="#"
  >
    Home
  </BreadcrumbItem>
</Breadcrumb>
`;
